src/objects/Project_Zone_SOSP__c.object
<CustomObject>
    <description>Project Zone</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Project_Zone_Group__r.Zone_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Zone_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Zone Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Zone_Group_SOSP__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Zone_Group_SOSP__c</referenceTo>
        <relationshipLabel>Project Zones</relationshipLabel>
        <relationshipName>Project_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project_SOSP__c</referenceTo>
        <relationshipLabel>Project Zones</relationshipLabel>
        <relationshipName>Project_Zones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zone_Group_Coordinator__c</fullName>
        <formula>Project_Zone_Group__r.Zone_Group_Coordinator__r.FirstName + &apos; &apos; +  Project_Zone_Group__r.Zone_Group_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Group  Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Zones_Coordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <formula>Zone_p__r.Name</formula>
        <label>Zone_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_p__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone(p)</label>
        <referenceTo>Zone_SOSP__c</referenceTo>
        <relationshipLabel>Project Zones</relationshipLabel>
        <relationshipName>Project_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Zone</label>
    <nameField>
        <displayFormat>PZ-{0000}</displayFormat>
        <label>Project Zone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>